improve browser build quality

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="zxx">
     <head>
+        <title>Slang Playground App</title>
+        <meta name="description" content="A graphics app written in slang">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script>
@@ -12,6 +15,9 @@
             }
             body {
                 margin: 0;
+                width: 100vw;
+                height: 100vh;
+                overflow: hidden;
             }
         </style>
     </head>
